name: "compcert"
version: "3.5"
opam-version: "2.0"
synopsis: "Extraction of a useful fragment of CompCert for Gillian-C"
description: """
"""
homepage:"https://compcert.org/"
maintainer: ["Sacha Ayoun <sachaayoun@gmail.com>"]
authors: [
  "Sacha Ayoun <sachaayoun@gmail.com>"
]
depends: [
  "menhir"
  "ocaml"
  "dune"
  "dune-site"
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name "--prefix" prefix "--relocatable"]
]
